fixed issue with the logo clipping with the nav bar on large phones in landscape mode by adjusting header height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -511,7 +511,7 @@ footer a i {
 
     /* Adjust header height for landscape*/
     header {
-        height: 120px;
+        height: 140px;
         /* Header size to fit the logo */
     }
 
